--- a/bestshop/css/header/header1.css
+++ b/bestshop/css/header/header1.css
@@ -117,7 +117,7 @@
         width: 40px;
         padding: 0; }
       .lib-list-item-product2 .image-dev .list-button-dev li:hover {
-        background: #ff3c20; }
+        background: #2677e7; }
         .lib-list-item-product2 .image-dev .list-button-dev li:hover a, .lib-list-item-product2 .image-dev .list-button-dev li:hover button {
           color: #fff; }
   .lib-list-item-product2 .caption-dev {
