--- a/bestshop/css/home2.css
+++ b/bestshop/css/home2.css
@@ -2174,6 +2174,31 @@ div.required .control-label:before {
     color: #000;
     font-weight: 700;
     text-transform: uppercase; }
+  #content .module h3.modtitle2 {
+    font-size: 18px;
+    color: #222;
+    font-weight: 700;
+    position: relative;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+    text-transform: uppercase; }
+  #content .module h3.modtitle2:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #eee;
+    bottom: 0;
+    left: 0; }
+  #content .module h3.modtitle2:before {
+    position: absolute;
+    content: "";
+    width: 150px;
+    height: 2px;
+    background-color: #ff9800;
+    bottom: 0;
+    left: 0;
+    z-index: 2; }
 
 .content-aside .module {
   border: 1px solid #d7d7d7;
@@ -2195,7 +2220,7 @@ div.required .control-label:before {
     font-weight: 700;
     text-transform: uppercase; }
   .content-aside .module .modcontent {
-    padding: 15px 20px; }
+    padding: 15px; }
   .content-aside .module#blog-search {
     border: none; }
 
@@ -2207,7 +2232,7 @@ div.required .control-label:before {
     display: block;
     position: absolute;
     right: 0;
-    top: 5px;
+    top: 0;
     cursor: pointer;
     z-index: 10;
     text-align: center;
@@ -2226,7 +2251,7 @@ div.required .control-label:before {
   .category-style .list-group > li .active, .category-style .list-group > li .active + .button-view {
     color: #ff9800; }
   .category-style .list-group > li .active + .button-view:before {
-    content: '\f147'; }
+    content: '\f0dd'; }
   .category-style .list-group > li li {
     padding: 0;
     position: relative;
@@ -2584,8 +2609,34 @@ ul.breadcrumb {
 /*=========== BLOCK SIDEBAR ==================*/
 .content-aside .product-simple {
   position: relative; }
+  .content-aside .product-simple h3.modtitle {
+    position: relative;
+    font-size: 16px;
+    font-weight: 700;
+    color: #222;
+    text-transform: uppercase;
+    padding-bottom: 15px; }
+  .content-aside .product-simple h3.modtitle:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: #eee; }
+  .content-aside .product-simple h3.modtitle:before {
+    content: "";
+    display: block;
+    width: 130px;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: #ff9800;
+    z-index: 2; }
   .content-aside .product-simple .modcontent {
-    padding: 15px 10px; }
+    padding: 15px 0; }
   .content-aside .product-simple .so-quickview {
     display: none; }
   .content-aside .product-simple .so-extraslider {
@@ -2596,8 +2647,8 @@ ul.breadcrumb {
     text-align: right;
     right: 0;
     min-width: 80px;
-    right: 10px;
-    top: 18px;
+    right: 0;
+    top: 5px;
     min-width: 60px; }
   .content-aside .product-simple .so-extraslider .owl2-controls .owl2-dots .owl2-dot {
     width: 8px;
@@ -2618,63 +2669,12 @@ ul.breadcrumb {
     .content-aside .product-simple .so-extraslider .owl2-controls .owl2-dots .owl2-dot.active {
       width: 30px;
       background-color: #ff9800; }
-  .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav {
-    top: 1px;
-    position: absolute;
-    right: 0px; }
-  .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-prev, .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-next {
-    background-color: #222;
-    border: none;
-    border-radius: 0px;
-    -moz-border-radius: 0px;
-    -webkit-border-radius: 0px;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    float: left;
-    text-indent: -9999px;
-    overflow: hidden;
-    cursor: pointer;
-    opacity: 1;
-    position: absolute;
-    top: 50%;
-    z-index: 99; }
-    .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-prev:before, .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-next:before {
-      color: #fff;
-      font-family: 'FontAwesome';
-      display: block;
-      text-indent: 0 !important;
-      width: 100%;
-      height: 100%;
-      font-size: 18px; }
-    .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-prev.owl2-next, .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-next.owl2-next {
-      right: 0; }
-    .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-prev.owl2-next:before, .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-next.owl2-next:before {
-      content: "\f054"; }
-    .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-prev.owl2-prev, .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-next.owl2-prev {
-      left: 0; }
-    .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-prev.owl2-prev:before, .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-next.owl2-prev:before {
-      content: "\f053"; }
-    .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-prev:hover, .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-next:hover {
-      background-color: #ff9800; }
-    .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-prev:hover:before, .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav .owl2-next:hover:before {
-      color: #fff; }
-  .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav > div {
-    margin-top: 0;
-    line-height: 28px; }
-    .content-aside .product-simple .so-extraslider .owl2-controls .owl2-nav > div:before {
-      position: static;
-      font-weight: 400; }
-  .content-aside .product-simple .so-extraslider:hover .owl2-controls {
-    /*@include transform(scale(1));          
-     @include effect-block-show();*/ }
+  .content-aside .product-simple .so-extraslider .extraslider-inner {
+    position: static; }
   .content-aside .product-simple .so-extraslider .extraslider-inner .item .item-inner {
     display: inline-block;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
-    width: 100%;
-    border-bottom: 1px solid #ddd; }
+    margin-bottom: 30px;
+    width: 100%; }
     .content-aside .product-simple .so-extraslider .extraslider-inner .item .item-inner:last-child {
       border-bottom: none;
       margin-bottom: 0; }
@@ -3177,13 +3177,17 @@ ul.breadcrumb {
   .filter-shopby .table_cell, .filter-row .table_cell {
     margin-bottom: 10px;
     padding-bottom: 20px;
-    border-bottom: #f1f1f1 1px solid;
     display: block; }
   .filter-shopby legend, .filter-row legend {
     border: none;
-    font-size: 13px;
+    font-size: 14px;
     margin: 0;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #222;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #d7d7d7;
+    margin-bottom: 20px; }
   .filter-shopby .checkboxes_list > li:not(:last-child), .filter-row .checkboxes_list > li:not(:last-child), .filter-shopby .simple_vertical_list li:not(:last-child), .filter-row .simple_vertical_list li:not(:last-child) {
     margin-bottom: 5px; }
   .filter-shopby .color_btn, .filter-row .color_btn {
@@ -3230,40 +3234,97 @@ ul.breadcrumb {
 
 .ui-slider {
   height: 7px;
-  background: #f8f8f8;
+  background: #ff9800;
   border: 1px solid #eaeaea;
   max-width: 220px; }
+
+.ui-slider-horizontal .ui-slider-range {
+  background: #555; }
 
 .ui-slider .ui-slider-handle {
   display: block;
   width: 19px;
   height: 19px;
-  background: #fff;
-  border: 1px solid #eaeaea;
+  background: #ff9800;
+  border-radius: 50%;
   cursor: pointer;
   top: -7px; }
 
-.ui-slider .ui-slider-handle::before {
-  content: "";
-  display: block;
-  width: 9px;
-  height: 9px;
-  background: #b2b2b2;
-  position: absolute;
-  top: 4px;
-  left: 4px; }
-
-.ui-slider .ui-slider-handle, .ui-slider .ui-slider-handle::before {
-  border-radius: 50%; }
-
 .range {
-  margin-bottom: 15px; }
+  margin-top: 15px; }
+
+.bock-range {
+  display: block;
+  overflow: hidden;
+  margin: 20px 0;
+  position: relative; }
+  .bock-range input {
+    width: 45%;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    color: #222;
+    font-size: 16px;
+    border: 1px solid #d7d7d7;
+    border-radius: 3px;
+    float: left; }
+  .bock-range input:last-child {
+    float: right; }
+  .bock-range:after {
+    content: "";
+    width: 10px;
+    height: 2px;
+    display: block;
+    position: absolute;
+    background: #555;
+    bottom: 50%;
+    right: 50%;
+    -webkit-transform: translate(50%, 50%);
+    -moz-transform: translate(50%, 50%);
+    -ms-transform: translate(50%, 50%);
+    -o-transform: translate(50%, 50%);
+    transform: translate(50%, 50%); }
+
+button.filter {
+  margin-top: 20px;
+  background: #222;
+  color: #fff;
+  text-transform: uppercase;
+  border-radius: 3px; }
+  button.filter:hover {
+    color: #d7d7d7; }
 
 .range > * {
   display: inline; }
 
 .checkboxes_list {
   color: #333; }
+
+ul.size {
+  text-align: center; }
+  ul.size li {
+    display: inline-block;
+    border: 1px solid #e8e8e8;
+    width: 30px;
+    height: 30px;
+    line-height: 30px; }
+  ul.size li:hover {
+    background: #ff9800; }
+  ul.size li:hover a {
+    color: #fff; }
+
+ul.color {
+  text-align: center; }
+  ul.color li {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    padding: 1px;
+    border: 1px solid #e8e8e8; }
+  ul.color li a {
+    width: 100%;
+    height: 100%;
+    display: block; }
 
 .simple_vertical_list input[type="radio"], .checkboxes_list input[type="radio"], .simple_vertical_list input[type="checkbox"], .checkboxes_list input[type="checkbox"] {
   display: none; }
@@ -3285,11 +3346,10 @@ ul.breadcrumb {
     position: absolute;
     left: 0;
     top: -1px;
-    width: 22px;
-    height: 22px;
+    width: 25px;
+    height: 20px;
     color: inherit;
-    background: #fff;
-    border: 1px solid #eaeaea;
+    background: #f5f5f5;
     border-radius: 3px; }
   .simple_vertical_list input[type="checkbox"] + label::before, .checkboxes_list input[type="checkbox"] + label::before {
     font-size: 12px; }
@@ -3300,7 +3360,7 @@ ul.breadcrumb {
     padding-left: 0px;
     margin: 0px; }
   .simple_vertical_list input[type="checkbox"]:checked + label::before, .checkboxes_list input[type="checkbox"]:checked + label::before {
-    content: '\f00c'; }
+    background: url("../image/icon/checkbox.png") no-repeat; }
   .simple_vertical_list input[type="radio"]:checked + label::before, .checkboxes_list input[type="radio"]:checked + label::before {
     content: "\f10c"; }
 
@@ -5290,7 +5350,7 @@ span.fa-stack {
 .price {
   margin: 0 0 10px 0;
   line-height: 24px;
-  color: #ff9800;
+  color: #ff3c20;
   font-size: 16px;
   font-weight: 600; }
   .price .price-old {
@@ -5308,7 +5368,7 @@ span.fa-stack {
     /* [8] */
     font-weight: normal; }
   .price .price-new, .price span.price {
-    color: #ff9800;
+    color: #ff3c20;
     /* [4] */
     /* [6] */
     /* [6] */
@@ -5320,7 +5380,7 @@ span.fa-stack {
 /*==================== COUNT DOWN BOX ====================*/
 .countdown_box {
   position: absolute;
-  top: 50%;
+  top: 49%;
   margin-top: -28px;
   left: 50%;
   width: 210px;
@@ -5360,39 +5420,31 @@ span.fa-stack {
   .countdown_box .time-item:last-child {
     border: none; }
 /*====================PRODUCT CATEGORY ====================*/
-.products-category .filter_group {
-  width: 25%;
-  display: inline-block;
-  vertical-align: top; }
-  .products-category .category-info .form-group {
-    margin: 0; }
-  .products-category .category-info .form-group > p {
-    margin: 0; }
-
-.title-category {
-  /* [4] */
-  /* [6] */
-  /* [6] */
-  /* [7] */
-  font-size: 18px;
-  font-size: 1.8rem;
-  /* [8] */
-  text-transform: uppercase;
-  color: #222;
-  border-bottom: 2px solid #eee;
-  display: inline-block;
-  width: 100%;
-  position: relative;
-  margin-top: 0;
-  padding-bottom: 10px; }
-  .title-category:after {
-    position: absolute;
-    content: "";
-    width: 110px;
-    height: 2px;
-    background-color: #ff9800;
-    bottom: -2px;
-    left: 0; }
+.all-categories .box-categories {
+  margin-left: -15px;
+  margin-right: -15px;
+  overflow: hidden; }
+  .all-categories .box-categories .category {
+    width: 20%;
+    display: inline-block;
+    float: left;
+    text-align: center;
+    padding: 0 15px;
+    margin-bottom: 30px; }
+  .all-categories .box-categories .category a {
+    display: block;
+    background: #f7f7f7;
+    overflow: hidden;
+    color: #222;
+    text-transform: uppercase; }
+  .all-categories .box-categories .category a h4 {
+    font-size: 14px; }
+  .all-categories .box-categories .category a:hover {
+    color: #ff9800; }
+    .all-categories .box-categories .category a:hover img {
+      opacity: 0.8; }
+  .all-categories .box-categories.box-categories2 .category {
+    width: 16.66667%; }
 
 .products-category .form-group .short-by {
   margin-right: 10px; }
@@ -5404,6 +5456,62 @@ span.fa-stack {
     display: block; }
   .refine-search a:hover {
     color: #ff9800; }
+/*FEATURED BRANDS*/
+.featured-brands {
+  margin-bottom: 50px;
+  position: relative; }
+  .featured-brands .box-brands .extraslider-inner {
+    position: static; }
+  .featured-brands .box-brands .item img {
+    opacity: 0.5;
+    transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease; }
+  .featured-brands .box-brands .item img:hover {
+    opacity: 1; }
+  .featured-brands .box-brands .owl2-controls .owl2-nav {
+    position: absolute;
+    top: 0;
+    right: 0; }
+  .featured-brands .box-brands .owl2-controls .owl2-nav .owl2-prev, .featured-brands .box-brands .owl2-controls .owl2-nav .owl2-next {
+    width: 10px;
+    height: 20px;
+    line-height: 23px;
+    text-align: center;
+    text-indent: -9999px;
+    overflow: hidden;
+    cursor: pointer;
+    background-color: #fff;
+    position: relative;
+    display: inline-block;
+    float: none;
+    z-index: 99;
+    opacity: 1;
+    margin-left: 20px; }
+    .featured-brands .box-brands .owl2-controls .owl2-nav .owl2-prev:before, .featured-brands .box-brands .owl2-controls .owl2-nav .owl2-next:before {
+      opacity: 1;
+      color: #888;
+      font-weight: 400;
+      font-family: 'FontAwesome';
+      position: absolute;
+      top: -2px;
+      left: 0;
+      display: inline-block;
+      text-indent: 0;
+      width: 100%;
+      height: 100%;
+      font-size: 26px; }
+    @media screen and (-webkit-min-device-pixel-ratio: 0) {
+          .featured-brands .box-brands .owl2-controls .owl2-nav .owl2-prev:before, .featured-brands .box-brands .owl2-controls .owl2-nav .owl2-next:before {
+            top: 0; } }
+    .featured-brands .box-brands .owl2-controls .owl2-nav .owl2-prev.owl2-next:before, .featured-brands .box-brands .owl2-controls .owl2-nav .owl2-next.owl2-next:before {
+      content: "\f105"; }
+    .featured-brands .box-brands .owl2-controls .owl2-nav .owl2-prev.owl2-prev:before, .featured-brands .box-brands .owl2-controls .owl2-nav .owl2-next.owl2-prev:before {
+      content: "\f104"; }
+    .featured-brands .box-brands .owl2-controls .owl2-nav .owl2-prev:hover:before, .featured-brands .box-brands .owl2-controls .owl2-nav .owl2-next:hover:before {
+      color: #ff9800; }
+  .featured-brands .box-brands .owl2-controls .owl2-nav > div:after {
+    display: none; }
 /*TOOLBAR LISTING TOP*/
 #content.col-sm-6 .product-compare {
   display: none; }
@@ -5488,39 +5596,32 @@ span.fa-stack {
     height: 33px;
     line-height: 33px;
     padding: 0px 20px 0 10px;
-    background-color: #fff;
-    /*position: relative;
-     &:after{
-     position: absolute;
-     font-family: FontAwesome;
-     content: "\f107";
-     font-size: 14px;
-     top: 0;
-     #{$right}: 0;
-     color: #747474;
-     }*/ }
+    background-color: #fff; }
+  .filters-panel .form-group select.form-control#input-sort {
+    float: left;
+    border-right: none; }
   .filters-panel .form-group select.form-control:hover {
     cursor: pointer; }
   .filters-panel .short-by-show.text-center .form-group {
     display: none; }
 
-.box-pagination .pagination > li {
-  margin: 0 3px; }
-  .box-pagination .pagination > li:hover span, .box-pagination .pagination > li.active span, .box-pagination .pagination > li:hover a, .box-pagination .pagination > li.active a {
-    border-color: #ff9800;
-    background-color: #ff9800;
-    color: #fff; }
-  .box-pagination .pagination > li span, .box-pagination .pagination > li a {
-    text-align: center;
-    width: 33px;
-    height: 33px;
-    line-height: 33px;
-    border-radius: 3px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    padding: 0; }
-  .box-pagination .pagination {
-    display: block; }
+.box-pagination .content-pagination1 {
+  display: inline-block;
+  float: right;
+  height: 33px;
+  line-height: 33px; }
+  .box-pagination .content-pagination1 span {
+    float: left; }
+  .box-pagination .content-pagination1 .pagination1 {
+    display: inline-block;
+    overflow: hidden;
+    float: left; }
+  .box-pagination .content-pagination1 .pagination1 li {
+    display: inline-block;
+    float: left;
+    padding: 0 10px; }
+  .box-pagination .content-pagination1 .pagination1 li.active {
+    color: #ff9800; }
 /*================ PRODUCT LIST ===================*/
 .product-layout .second_img .img_0 {
   right: 50%;
@@ -5665,9 +5766,9 @@ button {
     margin-bottom: 0; }
   .products-list.grid .product-layout .product-item-container .right-block h4 {
     margin: 3px 0;
-    font-weight: 400; }
+    font-weight: 700; }
     .products-list.grid .product-layout .product-item-container .right-block h4 a {
-      font-size: 14px;
+      font-size: 18px;
       color: #222; }
     .products-list.grid .product-layout .product-item-container .right-block h4 a:hover {
       color: #ff9800; }
@@ -5874,9 +5975,10 @@ button {
     margin-bottom: 0px; }
   .products-list.list .product-layout .product-item-container .right-block h4 {
     margin-bottom: 5px;
-    font-weight: 400; }
+    font-weight: 700;
+    font-size: 18px; }
     .products-list.list .product-layout .product-item-container .right-block h4 a {
-      color: #444;
+      color: #222;
       /* [4] */
       /* [6] */
       /* [6] */
