--- a/bestshop/sass/utilities/_utilities.scss
+++ b/bestshop/sass/utilities/_utilities.scss
@@ -895,6 +895,80 @@
 			} 
         }
 }
+// owl2-nav layout 8 - emarket
+
+@mixin owl2-nav-style8($w,$h,$fontsize){
+	position: absolute;
+	top: 0;
+	#{$right}: 0;
+	.owl2-prev,
+    .owl2-next{
+		width: $w;
+	  height: $h;
+	  line-height: 23px;
+	  text-align: center;
+	  text-indent: -9999px;
+	  overflow: hidden;
+	  cursor: pointer;
+	  background: none;
+	  position: relative;
+	  display: inline-block;
+	  
+	  float: none;
+	  
+	  z-index: 99;
+	  opacity: 1;
+	  margin-#{$left}: 10px;
+
+	  &:before{
+	  	opacity: 1;
+	    color: #888;
+	    font-weight: 400;
+	    font-family: $FontAwesome;
+	    position: absolute;
+	    top: -2px;
+	    @media screen and(-webkit-min-device-pixel-ratio:0) {
+	    	top: 0;
+	    }
+	    #{$left}: 0;
+	    display: inline-block;
+	    text-indent: 0;
+	    width: 100%;
+	    height: 100%;
+	    font-size: $fontsize;	   
+	  }
+	  &.owl2-next{
+	  	
+	    &:before{
+	      @include if-ltr{             
+	      	content: "\f105"; 
+	      }  
+	      @include if-rtl {
+	        content: "\f104"; 
+	      }  
+	    }
+	  }
+	  &.owl2-prev{
+	    &:before{
+	      @include if-ltr{             
+	      	content: "\f104"; 
+	      }  
+	      @include if-rtl {
+	        content: "\f105"; 
+	      }  
+	    }
+	  }
+	  &:hover{
+	  	
+	  	
+	    &:before{
+	      color: $linkColor;
+	    }
+	  } 
+	}
+	  
+}
+
 
 
 // hover link effect - destino
